--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/mapbox-gl": "^2.7.15",
     "chart.js": "^4.4.0",
     "http-proxy-middleware": "^1.0.5",
+    "mapbox-gl": "^2.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.1",
+    "react-map-gl": "^7.1.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
