--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.0",
     "http-proxy-middleware": "^1.0.5",
     "mapbox-gl": "^2.15.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.1",
